# xsens_awinda_ros_description

./: CMakeLists.txt  README.md  package.xml
launch/: xsens_awinda.launch
meshes/: arm_leg_bone.stl  chest.stl  foot.stl  hand.stl  head.stl  spinal_segment.stl  toe.stl
meshes/visual/: left_upper_leg.stl  pelvis.stl  pelvis_armour.stl  right_upper_leg.stl
rviz/: xsens_awinda_visualization.rviz  xsens_mvn_visualization.rviz
scripts/: avatar.py  avatar_generator.py  avatar_materials.py  avatar_properties.py  model_description.py  model_description_from_msg.py  model_description_new.py  urdf_model_generator.py
