<?xml version="1.0"?>
<package format="2">

    <name>xsens_mvn_ros_description</name>
    <version>0.0.1</version>
    
    <description> The xsens_mvn_ros_description contains an URDF model generator</description>

    <maintainer email="luca.fortini@iit.it">Luca Fortini</maintainer>
    <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>
    <maintainer email="marta.lorenzini@iit.it">Marta Lorenzini</maintainer>

    <license>BSD</license>

    <url>https://github.com/hrii-iit/xsens_mvn_ros_description</url>
    <author email="mattia.leonori@iit.it">Mattia Leonori</author>
    
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>xacro</depend>
    <depend>urdf</depend>
    
</package>